fix(web): add --enable-preview flags and directory creation for JDK 21 + quarto
- Add --enable-preview --source 21 to all Java invocations in flake.nix and
  BuildWeb.java subprocess calls (ConvertAndSplit needs unnamed classes too)
- Add import java.nio.file.Path to fix 'cannot find symbol' errors
- Add createDirectories() calls before list() for untracked web output dirs
- Add error output dumping (all lines, not just Exception/Error) for debugging
- Add backup import for NoSuchFileException
- Fix import pattern: keep static Files.* and Paths.* for existing get() calls

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>